fixing light/dark mode toggle issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --description: #646464;
   --toggle-bg: #f0eb9d;
   --toggle-fg: #ffd000;
+  --toggle-img: url('../assets/Light1.png');
   max-height: 100vh;
   margin: 0;
   padding: 0; 
@@ -36,4 +37,44 @@ body {
   --description: #a7a7a7;
   --toggle-bg: #283452;
   --toggle-fg: #00a5ff;  
+  --toggle-img: url('../assets/Light5.png');
 }
+/* * { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --background-color: #f6f6f6;
+  --title1-color: #2f55bc;
+  --title2-color: #38c1da;
+  --description: #646464;
+  --toggle-bg: #f0eb9d;
+  --toggle-fg: #ffd000;
+  max-height: 100vh;
+  margin: 0;
+  padding: 0; 
+  font-style: oblique;
+}
+
+body {   
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Labrada', cursive;
+  margin: 3rem;
+  min-width: 320px;
+  max-height: 100vh; /* fixed vertical scrollbar issue *//*
+  background-color: var(--background-color);
+  transition: background-color 1500ms ease-in-out;
+}
+
+[data-theme='dark'] {
+  --background-color: #000000;
+  --title1-color: #2F94BC;
+  --title2-color: #9ADAE5;
+  --description: #a7a7a7;
+  --toggle-bg: #283452;
+  --toggle-fg: #00a5ff;  
+} */
